# songtools

./: .gitignore  README.md  pyproject.toml
src/songtools/: __init__.py  compositions.py  files.py  keys.py  layers.py  lib.py  sounds.py  transports.py  tunes.py  types.py
